# fly-on-the-wall

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  CODE_QUALITY.md  IMPLEMENTATION_TASKS.md  LICENSE  PROOF_OF_CONCEPT_RESULTS.md  README.md  pyproject.toml
.github/: FUNDING.yml
src/fly_on_the_wall/: __init__.py  api_keys.py  audio.py  audio_metadata.py  cache.py  cleanup.py  cli.py  cli_costs.py  cli_glossary.py  cli_menu.py  cli_publish.py  cli_speaker_review.py  cli_watch.py  config.py  costs.py  db.py  doctor.py  embeddings.py  exporting.py  glossary.py  meetings.py  normalization.py  people.py  people_embeddings.py  pipeline.py  processing.py  publishing.py  reanalysis.py  recording_quality.py  rendering.py  secrets.py  service_pricing.py  setup.py  speaker_identity.py  speaker_matching.py  speakers.py  storage.py  voice_samples.py  watch.py
src/fly_on_the_wall/providers/: __init__.py  elevenlabs.py  openai_analysis.py  openai_cleanup.py
tests/: test_audio.py  test_audio_metadata.py  test_cleanup.py  test_cli.py  test_cli_menu.py  test_config.py  test_costs.py  test_db.py  test_doctor.py  test_elevenlabs_provider.py  test_embeddings.py  test_exporting.py  test_glossary.py  test_golden_fixtures.py  test_meeting_commands.py  test_meetings.py  test_normalization.py  test_openai_analysis.py  test_openai_cleanup.py  test_people.py  test_people_embeddings.py  test_pipeline.py  test_processing.py  test_publishing.py  test_reanalysis.py  test_recording_quality.py  test_rendering.py  test_secrets.py  test_service_pricing.py  test_speaker_assignments.py  test_speaker_identity.py  test_speaker_matching.py  test_speaker_review.py  test_speakers.py  test_storage.py  test_voice_samples.py  test_watch.py
tests/fixtures/: elevenlabs_raw.json  named_transcript.txt
