[project]
name = "fly-on-the-wall"
version = "0.1.0"
description = "Personal CLI note-taker for turning meeting audio into named, cleaned Markdown transcripts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "keyring>=25.5.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "watchfiles>=1.0.0",
]

[project.scripts]
fot = "fly_on_the_wall.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
exclude = ["poc"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
